# Poetry_and_Pytest

mock_example/: pyproject.toml
mock_example/src/mock_example/: __init__.py  api.py  area.py  file_handler.py  person.py
mock_example/tests/: test_api.py  test_area.py  test_file_handler.py  test_person.py
poetry_session_integration_testing_v2/dbms/: pyproject.toml
poetry_session_integration_testing_v2/dbms/src/dbms/: __init__.py  user_database.py  user_model.py
poetry_session_integration_testing_v2/dbms/tests/: conftest.py  test_dbms.py
