[tool.poetry]
name = "mock-example"
version = "0.1.0"
description = ""
authors = ["saljeshh <saljesh2020@gmail.com>"]
readme = "README.md"
packages = [{include = "mock_example", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
