[tool.poetry]
name = "dbms"
version = "0.1.0"
description = ""
authors = ["saljeshh <saljesh2020@gmail.com>"]
readme = "README.md"
packages = [{include = "dbms", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
